fix overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body,
 html {
   width: 100%;
   height: 100%;
+}
+
+body {
   overflow: hidden;
 }
 
